# asteroid-launcher

./: .gitignore  CMakeLists.txt  COPYING.MIT  README  applauncherbackground.cpp  applauncherbackground.h  asteroid-launcher.ca.ts  asteroid-launcher.de.ts  asteroid-launcher.el.ts  asteroid-launcher.es.ts  asteroid-launcher.fa.ts  asteroid-launcher.fr.ts  asteroid-launcher.hu.ts  asteroid-launcher.it.ts  asteroid-launcher.kab.ts  asteroid-launcher.ko.ts  asteroid-launcher.nl.ts  asteroid-launcher.pl.ts  asteroid-launcher.pro  asteroid-launcher.pt_BR.ts  asteroid-launcher.ru.ts  asteroid-launcher.ta.ts  asteroid-launcher.tr.ts  asteroid-launcher.uk.ts  asteroid-launcher.zh_Hans.ts  firstrun.cpp  firstrun.h  gesturefilterarea.cpp  gesturefilterarea.h  launcherlocalemanager.cpp  launcherlocalemanager.h  launcherwindowmodel.cpp  launcherwindowmodel.h  main.cpp  notificationsnoozer.h  resources-qml.qrc  vars.conf
applauncher/: 000-default-horizontal.qml  001-three-icons-horizontal.qml  002-two-columns.qml  003-turbo-list.qml  004-three-by-three.qml  005-speed-dial.qml
i18n/: asteroid-launcher.ar_AR.ts  asteroid-launcher.ast.ts  asteroid-launcher.az.ts  asteroid-launcher.be.ts  asteroid-launcher.bqi.ts  asteroid-launcher.ca.ts  asteroid-launcher.cs.ts  asteroid-launcher.da.ts  asteroid-launcher.de.ts  asteroid-launcher.de_DE.ts  asteroid-launcher.el.ts  asteroid-launcher.en.ts  asteroid-launcher.en_GB.ts  asteroid-launcher.eo.ts  asteroid-launcher.es.ts  asteroid-launcher.es_AR.ts  asteroid-launcher.fa.ts  asteroid-launcher.fi.ts  asteroid-launcher.fr.ts  asteroid-launcher.gl.ts  asteroid-launcher.he.ts  asteroid-launcher.hi.ts  asteroid-launcher.hr.ts  asteroid-launcher.hu.ts  asteroid-launcher.ia.ts  asteroid-launcher.id.ts  asteroid-launcher.isv.ts  asteroid-launcher.it.ts  asteroid-launcher.ja.ts  asteroid-launcher.ka.ts  asteroid-launcher.kab.ts  asteroid-launcher.ko.ts  asteroid-launcher.lb.ts  asteroid-launcher.lt.ts  asteroid-launcher.mr.ts  asteroid-launcher.ms.ts  asteroid-launcher.nb.ts  asteroid-launcher.nb_NO.ts  asteroid-launcher.nl.ts  asteroid-launcher.nl_BE.ts  (+21 more)
lipstick/: .gitignore  CMakeLists.txt  README  lipstick.pro
lipstick/tools/notificationtool/: .gitignore  CMakeLists.txt  notificationtool.cpp  notificationtool.pro
qml/: AppLauncher.qml  AppSwitcher.qml  BatteryPanel.qml  BluetoothAgent.qml  ClockPage.qml  CloseButton.qml  CommonPanel.qml  ConnectionSelector.qml  FeedsPage.qml  LauncherItemDelegate.qml  LauncherRotation.qml  LockscreenClock.qml  MainScreen.qml  NotificationPreview.qml  NumButton.qml  QuickSetItem.qml  QuickSettings.qml  QuickSettingsToggle.qml  ShutdownScreen.qml  SimPanel.qml  SwitcherItem.qml  ToolBarLayoutExample.qml  USBModeSelector.qml  VolumeControl.qml  WifiPanel.qml  compositor.qml
rpm/: lipstick-glacier-home-qt5.spec  lipstick-glacier-home-qt5.yaml  lipstick.desktop  lipstick.service
src/: CMakeLists.txt  applauncher.cpp  applauncher.h  applaunchhelper.cpp  applaunchhelper.h  firstrun.cpp  firstrun.h  gesturefilterarea.cpp  gesturefilterarea.h  glacierwindowmodel.cpp  glacierwindowmodel.h  launcherlocalemanager.cpp  launcherlocalemanager.h  lipstick.conf  main.cpp  nemovars.conf  notificationsnoozer.cpp  notificationsnoozer.h  resources-qml.qrc  src.pro
src/applauncher/: 000-default-horizontal.qml  000-default-vertical.qml  000-vertical.qml  001-three-icons-horizontal.qml  002-two-columns.qml  003-turbo-list.qml  004-three-by-three.qml  005-speed-dial.qml
src/qml/: AppLauncher.qml  AppSwitcher.qml  BatteryPanel.qml  CloseButton.qml  CommonPanel.qml  DeviceLock.qml  FeedsPage.qml  GlacierRotation.qml  LauncherItemDelegate.qml  Lockscreen.qml  LockscreenClock.qml  MainScreen.qml  NotificationPreview.qml  NumButton.qml  Pager.qml  ShutdownScreen.qml  SimPanel.qml  Statusbar.qml  StatusbarItem.qml  SwitcherItem.qml  VolumeControl.qml  WifiPanel.qml  compositor.qml
src/qml/applauncher/: AppLauncher.qml
src/qml/compositor/: CircleMaskShader.qml  ScreenGestureArea.qml  WindowWrapperAlpha.qml  WindowWrapperBase.qml  WindowWrapperMystic.qml  circlemaskshader.frag  compositor.qml
src/qml/firstrun/: FakeAlarmclock.qml  FirstRunConfig.qml  Tutorial.qml
src/qml/misc/: BluetoothAgent.qml  ConnectionSelector.qml  OneShotSound.qml  PanelsGrid.qml  ShutdownScreen.qml  Splash.qml  VolumeControl.qml  desktop.js
src/qml/notifications/: NotificationActions.qml  NotificationButton.qml  NotificationIndicator.qml  NotificationPreview.qml  NotificationView.qml  NotificationsPanel.qml
src/qml/quickpanel/: QuickPanel.qml  QuickPanelToggle.qml
src/qml/quicksettings/: QuickSettings.qml  QuickSettingsBatteryParticle.qml  QuickSettingsToggle.qml
src/qml/scripts/: desktop.js  rotation.js
src/qml/today/: Today.qml
src/shaders/: masked-spartan.frag
src/watchfaces/: 000-default-digital.qml  001-words-worte-palabras-mots.qml  002-analog-70s-classic.qml  003-alternative-digital-2.qml  004-alternative-scifi.qml  005-analog-circle-shades.qml  006-analog-50s-americana.qml  006-analog-weather-satellite.qml  007-bold-hour-bebas.qml  007-digital-outfit.qml  008-numerals-duo-synth-neon-green.qml  009-analog-scientific-v2.qml  010-analog-aviator.qml  011-bold-hour-bebas.qml  012-analog-words.qml  013-analog-nordic.qml  014-analog-50s-americana.qml  015-funky-town-words.qml  016-masked-spartan.qml  017-contemporary-digital-rings.qml
watchfaces/: 000-default-digital.qml  001-analog-70s-classic.qml  001-analog.qml  001-words-worte-palabras-mots.qml  002-analog-70s-classic.qml  002-words.nl.ts  002-words.qml  003-alternative-digital-2.qml  003-alternative-digital.qml  004-alternative-digital-2.qml  004-alternative-scifi.qml  004-analog-nordic.qml  005-alternative-scifi.qml  005-analog-nordic.qml  005-scifi.qml  006-activity.qml  006-analog-50s-americana.qml  006-bold-hour-bebas.qml  006-classic-analog.qml  007-analog-50s-americana.qml  007-bold-hour-bebas.qml  008-contemporary-digital-rings.qml  008-funky-town-words.qml  009-analog-scientific-v2.qml  009-contemporary-digital-rings.qml  009-funky-town-words.qml  010-masked-spartan.qml  (+8 more)
(+220 files in other folders)
